application/k8s/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: gateway
  name: gateway
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud..
  ports:
    - name: "gateway-port"
      port: 8894
      targetPort: 8084
  selector:
    deployment.name: gateway
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: gateway
  template:
    metadata:
      labels:
        deployment.name: gateway
    spec:
      containers:
      - name: gateway
        # Live:
        image: [IMAGEURL]:latest
        #
        #Local:
        #image: gateway
        ports:
          - containerPort: 8084
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
      # här är en meningslös kommentar
