application/k8s/lit.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: lit
  name: lit
spec:
  type: NodePort
  ports:
    - name: "lit-port"
      port: 8897
      targetPort: 8081
  selector:
    deployment.name: lit
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lit
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: lit
  template:
    metadata:
      labels:
        deployment.name: lit
    spec:
      containers:
      - name: lit
        # Live:
        image: [IMAGEURL]:latest
        #
        # Local:
        #image: lit
        ports:
          - containerPort: 8081
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster.
