application/k8s/litterbox.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: litterbox
  name: litterbox
spec:
  type: NodePort
  ports:
    - name: 'litterbox-port'
      port: 8899
      targetPort: 8085
  selector:
    deployment.name: litterbox
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litterbox
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: litterbox
  template:
    metadata:
      labels:
        deployment.name: litterbox
    spec:
      containers:
        - name: litterbox
          # Live:
          image: [IMAGEURL]:latest
          #
          # Local:
          #image: litterbox
          ports:
            - containerPort: 8085
      imagePullSecrets:
        - name: regcred # Secret set as a secret in the cluster
