application/k8s/pedigree.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: pedigree
  name: pedigree
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud..
  ports:
    - name: "pedigree-port"
      port: 8895
      targetPort: 8083
  selector:
    deployment.name: pedigree
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedigree
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: pedigree
  template:
    metadata:
      labels:
        deployment.name: pedigree
    spec:
      containers:
      - name: pedigree
        # Live:
        image: [IMAGEURL]:latest
        #
        # Local:
        #image: pedigree
        ports:
          - containerPort: 8083
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
